...
      };
    });
  }, [departureRoutes, arrivalRoutes, groupedDepartures]);

  return (
    <ScrollView
      testID="stop-detail-screen"
      style={styles.container}
      contentContainerStyle={styles.content}>
      <StopDetailHeader stopName={stopName} />

      <View style={styles.tabsSection}>
        <StopDetailTabs
...
